remove getFirst, getLast, removeLast